# chesspp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  FenReader.cpp  FenReader.hpp  board.cpp  board.hpp  board_renderer.cpp  board_renderer.hpp  dialog.cpp  dialog.hpp  engine.cpp  engine.hpp  evaluation.cpp  evaluation.hpp  fen_reader.cpp  fen_reader.hpp  main.cpp  move.hpp  move_generation.cpp  move_generation.hpp  move_ordering.cpp  move_ordering.hpp  pgn.cpp  pgn.hpp  timer.cpp  timer.hpp  transposition_table.cpp  transposition_table.hpp  types.hpp  uci.cpp  uci.hpp
